Scroll Down Button: Fix position on iOS (#2395)

--- a/src/components/middle/ScrollDownButton.module.scss
+++ b/src/components/middle/ScrollDownButton.module.scss
@@ -10,6 +10,10 @@
 
   &:not(:first-child) {
     margin-top: 0.5rem;
+
+    @media (max-width: 600px) {
+      margin-top: 1rem;
+    }
   }
 
   @media (min-width: 1276px) {
